--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "@wharfkit/wallet-plugin-template",
-    "description": "A template to create wallet plugins for use with @wharfkit/session.",
-    "version": "0.2.0",
-    "homepage": "https://github.com/wharfkit/wallet-plugin-template",
+    "name": "@wharfkit/wallet-plugin-wax",
+    "description": "A WalletPlugin for the WAX Cloud Wallet for use within the @wharfkit/session.",
+    "version": "0.1.0",
+    "homepage": "https://github.com/wharfkit/wallet-plugin-wax",
     "license": "BSD-3-Clause",
-    "main": "lib/wallet-plugin-template.js",
-    "module": "lib/wallet-plugin-template.m.js",
-    "types": "lib/wallet-plugin-template.d.ts",
+    "main": "lib/wallet-plugin-wax.js",
+    "module": "lib/wallet-plugin-wax.m.js",
+    "types": "lib/wallet-plugin-wax.d.ts",
     "sideEffects": false,
     "files": [
         "lib/*",
