--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "tslib": "^2.1.0"
     },
     "peerDependencies": {
-        "@wharfkit/session": "^0.3.0-ui-13"
+        "@wharfkit/session": "^0.3.0-ui-16"
     },
     "devDependencies": {
         "@rollup/plugin-alias": "^3.1.4",
@@ -34,7 +34,7 @@
         "@types/node": "^18.7.18",
         "@typescript-eslint/eslint-plugin": "^5.20.0",
         "@typescript-eslint/parser": "^5.20.0",
-        "@wharfkit/session": "^0.3.0-ui-13",
+        "@wharfkit/session": "^0.3.0-ui-16",
         "chai": "^4.3.4",
         "eslint": "^8.13.0",
         "eslint-config-prettier": "^8.1.0",
@@ -50,6 +50,7 @@
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.1.1",
         "typedoc": "^0.23.14",
-        "typescript": "^4.1.2"
+        "typescript": "^4.1.2",
+        "yarn-deduplicate": "^6.0.1"
     }
 }
