Fixing peer dependency

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "tslib": "^2.1.0"
     },
     "peerDependencies": {
-        "@wharfkit/session": "^0.3.0-ui-16"
+        "@wharfkit/session": "^0.3.0"
     },
     "devDependencies": {
         "@rollup/plugin-alias": "^3.1.4",
