--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "@types/node": "^18.7.18",
         "@typescript-eslint/eslint-plugin": "^5.20.0",
         "@typescript-eslint/parser": "^5.20.0",
-        "@wharfkit/session": "^1.2.2",
+        "@wharfkit/session": "git://github.com/wharfkit/session/tree/arbitrary-login-data",
         "chai": "^4.3.4",
         "eslint": "^8.13.0",
         "eslint-config-prettier": "^8.1.0",
