--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@wharfkit/wallet-plugin-cloudwallet",
     "description": "A WalletPlugin for the WAX Cloud Wallet for use within the @wharfkit/session.",
-    "version": "1.4.0",
+    "version": "1.5.0-beta.1",
     "homepage": "https://github.com/wharfkit/wallet-plugin-cloudwallet",
     "license": "BSD-3-Clause",
     "main": "lib/wallet-plugin-cloudwallet.js",
@@ -16,10 +16,15 @@
         "prepare": "make"
     },
     "dependencies": {
-        "tslib": "^2.1.0"
+        "@aws-amplify/api": "^6.3.11",
+        "@aws-amplify/api-graphql": "^4.7.15",
+        "aws-amplify": "5.3.26",
+        "tslib": "^2.1.0",
+        "uuid": "^11.1.0"
     },
     "peerDependencies": {
-        "@wharfkit/session": "^1.2.7"
+        "@wharfkit/antelope": "^1.0.5",
+        "@wharfkit/session": "^1.6.0"
     },
     "devDependencies": {
         "@rollup/plugin-alias": "^3.1.4",
